# ReGrid

./: .env.example  .gitignore  README.md  bun.lockb  docker-compose.backend.yml  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/services/: arcgis.py  geocode.py  scoring.py
public/datasets/: manifest.example.json
src/: styles.css
src/components/regrid/: LayerStack.tsx  LayersDock.tsx  LeftOperationsRail.tsx  MapCanvas.tsx  ProjectControlPanel.tsx  RiskPanel.tsx  RiskScoreHUD.tsx  SpatialCopilot.tsx  TokenGate.tsx  ToolPalette.tsx  TopBar.tsx  UserAuthGate.tsx  UserDashboard.tsx  WorkspaceHeader.tsx
src/data/: power-plants.geojson
src/lib/regrid/: analyze.ts  california.ts  californiaPlaces.ts  copilot-intent-schema.ts  copilot-structured.ts  copilot.ts  datasets.ts  env.ts  geo.ts  layers.ts  llm-rate-limit.ts  mapbox-geocode.ts  parseCopilotIntent.ts  real-dataset-screen.ts  types.ts  user-store.ts
src/routes/: app.tsx  index.tsx
