[project]
name = "regrid-backend"
version = "0.1.0"
description = "FastAPI + PostGIS backend for ReGrid"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "asyncpg>=0.29.0",
  "httpx>=0.27.0",
  "geoalchemy2>=0.15.2",
  "pydantic-settings>=2.4.0",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.6.3",
]
